--- a/a1/Makefile
+++ b/a1/Makefile
@@ -2,6 +2,7 @@ default:
 	javac src/com/ece358/*.java
 clean:
 	find . -name "*.class" -exec rm -rf {} \;
+	find . -name "*.pyc" -exec rm -rf {} \;
 test:
 	echo "=== RUNNING test01.py ==="
 	python tests/test01.py
